<resources>
    <string name="app_name">WalSmart</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="start_shopping">Start shopping!</string>
    <string name="prepared_sets">Standard Sets</string>
    <string name="individual_products">All Products</string>
    <string name="checkout">Checkout</string>
    <string name="back">Back</string>
    <string name="submit_order">Submit Order</string>
    <string name="thanks_for_order">Thank you for placing your order!</string>
    <string name="update_via_phone">We will update you on the order status via the given phone numer.</string>
    <string name="finish_shopping">Finish shopping</string>
    <string name="total_price">Total price to be paid at the shop: PLN </string>
    <string name="basket">Back To Basket</string>
    <string name="phone_number">Phone Number</string>
    <string name="choose_city">Choose City</string>
    <string name="choose_shop">Choose Shop</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="products_amount">How many products would you like to add?</string>
    <string name="add_to_basket">Add</string>
    <string name="it_s_smart_to_be_safe">it\'s smart to be safe</string>
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password_recovery_hint">Input e-mail for password recovery</string>
    <string name="reset_password">Reset password</string>
    <string name="about">About</string>
    <string name="log_out">Log out</string>
    <string name="authors"> \n Creators:\n
                            Bartłomiej Baranowski\n
                            Barbara Borkowska\n
                            Mateusz Jaksa\n
                            Relese date: 16/01/2021\n
                            Version: 1.4.2</string>
    <string name="my_sets">My sets</string>
    <string name="my_orders">My orders</string>
    <string name="handwritten_list">Handwritten list</string>

    <string-array name="cities_array">
        <item>Warsaw</item>
        <item>Torun</item>
        <item>Lodz</item>
    </string-array>

    <string-array name="shops_array_torun">
        <item>ul. Lubicka 55</item>
        <item>ul. Szosa Chelminska 183</item>
        <item>ul. Broniewskiego 90</item>
        <item>ul. Stawki Poludniowe 2–18</item>
        <item>ul. Gdanska 7</item>
        <item>ul. Niesiolowskiego 25</item>
    </string-array>

    <string-array name="shops_array_warsaw">
        <item>ul. Wolska 19/25</item>
        <item>ul. Sierakowskiego 4</item>
        <item>ul. Wilenska 14</item>
        <item>ul. Radzyminska 116</item>
        <item>ul. Ksiecia Boleslawa 1a</item>
        <item>ul. Jana Nowaka-Jezioranskiego 35</item>
        <item>ul. Borzymowska 26</item>
        <item>ul. Boleslawicka 2</item>
    </string-array>

    <string-array name="shops_array_lodz">
        <item>ul. Wincentego Tymienieckiego 16B</item>
        <item>ul. Karolewska 53</item>
        <item>ul. Politechniki 30 A</item>
        <item>ul. Pomorska 75</item>
        <item>ul. Dabrowskiego 17–21</item>
        <item>ul. Nowe Sady 1</item>
        <item>ul. Pilsudskiego 151</item>
        <item>ul. Przybyszewskiego 197a</item>
    </string-array>

    <string-array name="categories_array">
        <item>GRAINS</item>
        <item>PROTEINS</item>
        <item>DAIRY</item>
        <item>FRUITS</item>
        <item>VEGETABLES</item>
        <item>BEVERAGES</item>
        <item>SWEETS</item>
        <item>SPICES</item>
        <item>ANIMAL FOOD</item>
    </string-array>
</resources>