<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Confirmation">

    <TextView
        android:id="@+id/thanks_for_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thanks_for_order" />

    <TextView
        android:id="@+id/confirm_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_via_phone"
        android:layout_above="@id/finish_btn"
        />

    <Button
        android:id="@+id/finish_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish_shopping"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"/>
</RelativeLayout>